Changed project name

--- a/PaymentJournal.Web/Shared/MainLayout.razor
+++ b/PaymentJournal.Web/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>PaymentJournal.Web</PageTitle>
+<PageTitle>PaymentJournal_Web</PageTitle>
 
 <div class="page">
     <div class="sidebar">
