--- a/PaymentJournal.Web/Pages/_Host.cshtml
+++ b/PaymentJournal.Web/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace PaymentJournal.Web.Pages
+@namespace PaymentJournal_Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
