--- a/PaymentJournal.Web/_Imports.razor
+++ b/PaymentJournal.Web/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using PaymentJournal.Web
-@using PaymentJournal.Web.Shared
+@using PaymentJournal_Web
+@using PaymentJournal_Web.Shared
