Working on pages

--- a/Web/_Imports.razor
+++ b/Web/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using PaymentJournal_Web
 @using PaymentJournal_Web.Shared
+@using PaymentJournal_Web.Models
+@using PaymentJournal_Web.Pages.Components
+@using System
