--- a/Web/Pages/Payments.razor
+++ b/Web/Pages/Payments.razor
@@ -4,17 +4,6 @@
 Displaying Payments for current month/year
 <PaymentsMonthYearSelector />
 
-
-<div class="alert alert-secondary mt-4">
-    <span class="oi oi-pencil me-2" aria-hidden="true"></span>
-    <span class="text-nowrap">
-        Insert Create component here
-    </span>
-</div>
-
-
-
-
 <div class="rounded" >
     <table class="table table-sm">
         <thead>
@@ -22,9 +11,8 @@ Displaying Payments for current month/year
                 <td hidden>Id</td>
                 <td>Date</td>
                 <td>Note</td>
-                <td>Payees</td>
+                <td></td>
             </tr>
-
         </thead>
 
         <tbody>
@@ -32,24 +20,27 @@ Displaying Payments for current month/year
                 {
                     <tr>
                         <td hidden>@item.PaymentItemId</td>
-                        <td>@item.CreateDate</td>
+                        <td >@item.CreateDate.ToString("MMM-dd-yyyy")</td>
                         <td>@item.Note</td>
 
                         <td>
                             <table class="table table-striped table-light table-sm ">
                                 <thead>
-                                    <tr>
-                                        <td>Payee</td>
-                                        <td>Date</td>
-                                        <td>Amount</td>
-                                    </tr>
+                                    @if(item.Payees.Count > 0)
+                                    {
+                                        <tr>
+                                            <td class="col-6">Payee</td>
+                                            <td>Date</td>
+                                            <td>Amount</td>
+                                        </tr>
+                                    }
                                 </thead>
                                 <tbody>
                                     @foreach(var payee in item.Payees)
                                     {
                                         <tr>
                                             <td>@payee.Name</td>
-                                            <td>@payee.Date</td>
+                                            <td>@payee.Date.ToString("MMM-dd-yyyy")</td>
                                             <td>@payee.Amount</td>
                                         </tr>
                                     }
