--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -19,6 +19,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Payments
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="insert">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Insert Payments
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
