--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -4,6 +4,10 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.mouse-pointer {
+    cursor: pointer;
+}
+
 h1:focus {
     outline: none;
 }
@@ -24,6 +28,10 @@ a, .btn-link {
 
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
+}
+
+.max-width{
+    width: 100%;
 }
 
 .invalid {
