--- a/Web/Pages/Components/MonthYearSelector.razor
+++ b/Web/Pages/Components/MonthYearSelector.razor
@@ -1,13 +1,15 @@
 ﻿@using System.Globalization
-<div class="alert alert-secondary mt-4">
 
-    <form class="row row-cols-lg-auto g-3 align-items-center">
+ReturnURL: @ReturnURL
+
+<div class="alert alert-secondary mt-4">
+    <EditForm Model="@MonthYearModel" class="row row-cols-lg-auto g-3 align-items-center" OnValidSubmit="@HandleValidSubmit">
       <div class="col-12">
         <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
         <div class="input-group">
           <div class="input-group-text">Month</div>
 
-        <select class="form-select" id="inlineFormSelectPref">
+        <InputSelect class="form-select" id="month" name="Month" @bind-Value="MonthYearModel.Month">
             @for (int x = 1; x < 13; x++)
             {
                 @if (x == DateTime.Now.Month)
@@ -19,7 +21,7 @@
                     <option value=@x>@CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(x)</option>
                 }
             }
-        </select>
+        </InputSelect>
 
         </div>
       </div>
@@ -29,7 +31,7 @@
         <div class="input-group">
           <div class="input-group-text">Year</div>
 
-        <select class="form-select" id="inlineFormSelectPref">
+        <InputSelect class="form-select" id="year" name="Year" @bind-Value="MonthYearModel.Year">
             @foreach(var year in Years)
             {
                 if (year == DateTime.Now.Year)
@@ -41,7 +43,7 @@
                     <option>@year</option>
                 }
             }
-        </select>
+        </InputSelect>
 
         </div>
       </div>
@@ -49,5 +51,5 @@
       <div class="col-12">
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
-    </form>
+    </EditForm>
 </div>
