--- a/Web/Pages/Components/InsertPaymentItem.razor
+++ b/Web/Pages/Components/InsertPaymentItem.razor
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-12 b-3 p-3">
                     Note:
-                    <InputText class="max-width" @bind-Value="PaymentItem.Note" placeholder="" />
+                    <InputText class="full-width-100" @bind-Value="PaymentItem.Note" placeholder="" />
                 </div>
             </div>
         
