--- a/Web/Pages/Payments.razor
+++ b/Web/Pages/Payments.razor
@@ -25,7 +25,7 @@ Displaying Payments for current month/year
                         <td><div class="mouse-pointer" @onclick="() => DeleteDocument(item)"><i class="fa-solid fa-trash-can"></i></div></td>
                         <td hidden>@item.PaymentItemId</td>
                         <td >@item.CreateDate.ToString("M-dd-yy")</td>
-                        <td>@item.Note</td>
+                        <td class="max-width-200">@item.Note</td>
 
                         <td>
                             <table class="table table-striped table-light table-sm ">
