--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -30,7 +30,16 @@ a, .btn-link {
     outline: 1px solid #26b050;
 }
 
-.max-width{
+.max-width-300{
+    max-width: 300px;
+}
+
+.max-width-200 {
+    max-width: 200px;
+}
+
+
+.full-width-100{
     width: 100%;
 }
 
