--- a/Web/Pages/Components/InsertPaymentItem.razor
+++ b/Web/Pages/Components/InsertPaymentItem.razor
@@ -14,6 +14,12 @@
                     <InputText class="full-width-100" @bind-Value="PaymentItem.Note" placeholder="" />
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 b-3 p-3">
+                    Date:
+                    <InputDate @bind-Value="PaymentItem.CreateDate" />
+                </div>
+            </div>
         
             @if (HasPayees == false)
             {
