added confirmation for Delete

--- a/Web/Pages/Payments.razor
+++ b/Web/Pages/Payments.razor
@@ -33,7 +33,14 @@ else
                 @foreach(var item in PaymentItems)
                 {
                     <tr>
-                        <td><div class="mouse-pointer" @onclick="() => DeleteDocument(item)"><i class="fa-solid fa-trash-can"></i></div></td>
+                        <td>
+                            <table>
+                                <tr>
+                                    <td><button title="Delete Payment" class="btn btn-danger btn-sm" @onclick="() => DeleteDocument(item)"><i class="fa-solid fa-trash-can"></i></button></td>
+                                    @*<td><button title="Edit Payment" class="btn btn-primary btn-sm" @onclick="() => EditDocument(item)"><i class="fa-solid fa-pen-to-square"></i></button></td>*@
+                                </tr>
+                            </table>
+                        </td>
                         <td hidden>@item.PaymentItemId</td>
                         <td >@item.CreateDate.ToString("M-dd-yy")</td>
                         <td class="max-width-200">@item.Note</td>
