--- a/Web/Pages/Components/InsertPaymentItem.razor
+++ b/Web/Pages/Components/InsertPaymentItem.razor
@@ -1,8 +1,8 @@
 ﻿@page "/insert"
-<h3>InsertPaymentItem</h3>
+<h3>Insert Payment</h3>
 
 
-<button class="btn btn-primary btn-sm m-2" @onclick="() => AddNewPayee()">Add New Payee</button>
+
 
 <div class="row g-3">
     <div class="col-12 alert-secondary rounded p-3">
@@ -56,12 +56,22 @@
                     
                         </tbody>
                     </table>    
-                    <button type="submit" class="btn btn-primary">Publish</button>
+                    
                 </div>
             </div>
             
             
+            <div class="row b-3 p-3">
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => AddNewPayee()">Add New Payee</button>
+                </div>
+
+                <div class="col-sm-6">
+                    <button type="submit" class="btn btn-primary" style="float:right">Save</button>
+                </div>
+            </div>
         </EditForm>
+        
     </div>
 </div>
 
