--- a/Web/Pages/Components/Payments.razor
+++ b/Web/Pages/Components/Payments.razor
@@ -37,7 +37,7 @@ else
                             <table>
                                 <tr>
                                     <td><button title="Delete Payment" class="btn btn-danger btn-sm" @onclick="() => DeleteDocument(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                    @*<td><button title="Edit Payment" class="btn btn-primary btn-sm" @onclick="() => EditDocument(item)"><i class="fa-solid fa-pen-to-square"></i></button></td>*@
+                                    <td><button title="Edit Payment" class="btn btn-primary btn-sm" @onclick="() => EditDocument(item)"><i class="fa-solid fa-pen-to-square"></i></button></td>
                                 </tr>
                             </table>
                         </td>
@@ -51,6 +51,7 @@ else
                                     @if(item.Payees.Count > 0)
                                     {
                                         <tr>
+                                            <td hidden>Id</td>
                                             <td class="col-6">Payee</td>
                                             <td>Date</td>
                                             <td>Amount</td>
@@ -61,6 +62,7 @@ else
                                     @foreach(var payee in item.Payees)
                                     {
                                         <tr>
+                                            <td hidden>@payee.PayeeId</td>
                                             <td>@payee.Name</td>
                                             <td>@payee.Date.ToString("M-dd-yy")</td>
                                             <td>$@payee.AmountFormatted</td>
