--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -19,7 +19,14 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Insert Payments
             </NavLink>
         </div>
-
+        <div class="px-3 bg-dark">
+            &nbsp
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="budget">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Budget
+            </NavLink>
+        </div>
     </nav>
 </div>
 
