--- a/Web/Pages/Components/Budgets.razor
+++ b/Web/Pages/Components/Budgets.razor
@@ -1,334 +1,44 @@
-﻿@page "/budget"
-@page "/budget/{BudgetId}"
+﻿@page "/budgets"
 
+<h3>Budgets</h3>
 
-
-<EditForm Model="Budget" OnValidSubmit="HandleSubmit">
+<div class="alert-secondary p-3 m-3 rounded" >
     
-    <div class="alert-success p-3 m-3 rounded">
-        <div class="row">
-            <div class="col-2">
-                <h2>Budget</h2>
-            </div>
-            <div class="col-10">
-                <button type="button" title="Toggle Edit" class="btn btn-success btn-sm float-end" @onclick="() => ToggleDisabled()"><i class="fa-solid fa-pen-to-square"></i> Enable Edit</button>
-            </div>
-        </div>
-    </div>
+    <table class="table table-sm">
+        <thead>
+            <tr>
+                <td></td>
+                <td>Name</td>
+                <td>DTI</td>
+                <td>Expense Debt</td>
+                <td>Income Total</td>
+                <td>Expenses</td>
+                <td>Income</td>
+                <td>Bank Accounts</td>
+                <td>Credit Cards</td>
+                <td>Online Services</td>
+                <td></td>
 
+            </tr>
+        </thead>
 
-    <div class="row p-3 m-3 rounded">
-        <div class="col">
-
-            <div class="card-group">
-                <div class="card">
-                <div class="card-header">
-                    Financial Summary
-                </div>
-                  <div class="card-body">
-                    <p class="card-text">
-                       @*Content HERE*@
-                        <table style="width:220px" class="table table-striped table-sm ">
-                            <tr>
-                                <td class="p-1 text-end">Total Expense:</td>
-                                <td class="red_text">$@Budget.TotalExpenses.ToString("0.00")</td>
-                            </tr>
-                            <tr>
-                                <td class="p-1 text-end">Total Income:</td>
-                                <td class="green_text">$@Budget.TotalIncomes.ToString("0.00")</td>
-                            </tr>
-                            <tr>
-                                <td class="p-1 text-end">Difference:</td>
-                                <td>$@(FormatMoney(Budget.TotalIncomes - Budget.TotalExpenses))</td>
-                            </tr>
-                            <tr>
-                                <td class="p-1 text-end">DTI:</td>
-                                <td>%@(FormatPercent(Budget.Debt_Income_Ratio))</td>
-                            </tr>
-                        </table>      
-                    </p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">&nbsp</small>
-                  </div>
-                </div>
-                <div class="card">
-                <div class="card-header">
-                    Expenses By Account
-                </div>
-                  <div class="card-body">
-                    @*<h5 class="card-title">Card title</h5>*@
-                    <p class="card-text">
-                        @*Content HERE*@
-                        <table style="width:300px" class="table table-sm">
-                            <thead>
-                                <tr>
-                                    <td>Account</td>
-                                    <td>Sum</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach(var item in Budget.GetExpensePayGroups())
-                                {
-                                    <tr>
-                                        <td>@item.Account</td>
-                                        <td>$@(FormatMoney(item.Sum))</td>
-                                    </tr>
-                                }
-
-                            </tbody>
-                        </table>
-                    </p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">&nbsp</small>
-                  </div>
-                </div>
-                <div class="card">
-                <div class="card-header">
-                    Financial Summary
-                </div>
-                  <div class="card-body">
-                    @*<h5 class="card-title">Card title</h5>*@
-                    <p class="card-text">
-                        @*Content HERE*@
-
-                    </p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">&nbsp</small>
-                  </div>
-                </div>
-              </div>
-
-
-        </div>
-    </div>
-
-
-    <div class="alert-info p-3 m-3 rounded">
-        <div class="row">
-            <div class="col">
-                Budget Name: <InputText disabled=@Disabled @bind-Value="Budget.Name" />
-            </div>
-            <div class="col">
-                Annual Salary: <InputNumber disabled=@Disabled @bind-Value="Budget.AnnualSalary" />
-            </div>
-            <div class="col">
-                Gross: $@(FormatMoney(Budget.AnnualSalary / 12))
-            </div>
-            <div class="col">
-                <button type="button" disabled=@Disabled title="Delete Budget" class="btn btn-danger btn-sm float-end" @onclick="() => DeleteBudget(Budget.BudgetId)"><i class="fa-solid fa-trash-can"></i>Delete Budget</button>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="alert-secondary p-3 m-3 rounded" >
-
-        
-        <h2>Expenses</h2>
-        @if(Budget.Expenses.Count > 0)
-        {
-            <table style="width:900px" class="table table-sm">
-                <thead>
+        <tbody>
+                @foreach(var item in BudgetList)
+                {
                     <tr>
-                        <td></td>
-                        <td>Bill Name</td>
-                        <td>Paid To</td>
-                        <td>Paid By Acct</td>
-                        <td>Amount</td>
-                        <td>Note</td>
-                        <td>Est. Due Day</td>
-
+                        <td><button type="button" title="Edit Expense" class="btn btn-success btn-sm" @onclick="() => ViewBudget(item.BudgetId)"><i class="fa-solid fa-pen-to-square"></i></button></td>
+                        <td >@item.Name</td>
+                        <td >@(FormatPercent(item.Debt_Income_Ratio))%</td>
+                        <td>$@(FormatMoney(item.TotalExpenses))</td>
+                        <td>$@(FormatMoney(item.TotalIncomes))</td>
+                        <td >@item.Expenses.Count</td>
+                        <td >@item.Incomes.Count</td>
+                        <td >@item.BankAccounts.Count</td>
+                        <td >@item.CreditCards.Count</td>
+                        <td >@item.OnlineServices.Count</td>
+                        <td><button type="button" title="Delete Expense" class="btn btn-danger btn-sm" @onclick="() => DeleteBudget(item.BudgetId)"><i class="fa-solid fa-trash-can"></i></button></td>
                     </tr>
-                </thead>
-
-                <tbody>
-                        @foreach(var item in Budget.Expenses)
-                        {
-                            <tr>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><button disabled=@Disabled type="button" title="Delete Expense" class="btn btn-danger btn-sm" @onclick="() => DeleteExpense(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.BillName" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidTo" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidBy" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.Amount" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Note" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.EstimatedDueDay" /></td>
-                            </tr>
-                        }
-                </tbody>
-            </table>
-        }
-        
-        <button type="button" disabled=@Disabled title="Add Expense" class="btn btn-primary btn-sm" @onclick="() => AddExpense()"><i class="fa-solid fa-plus"></i></button>
-    </div>
-
-    <div class="alert-secondary p-3 m-3 rounded" >
-        <h2>Income</h2>
-        @if(Budget.Incomes.Count > 0)
-        {
-            <table style="width:700px" class="table table-sm">
-                <thead>
-                    <tr>
-                        <td></td>
-                        <td>Employer</td>
-                        <td>Type</td> @*like payroll*@
-                        <td>Amount</td>
-
-                    </tr>
-                </thead>
-
-                <tbody>
-                        @foreach(var item in Budget.Incomes)
-                        {
-                            <tr>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><button disabled=@Disabled type="button" title="Delete Income" class="btn btn-danger btn-sm" @onclick="() => DeleteIncome(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Employer" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Type" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.Amount" /></td>
-                            </tr>
-                        }
-                </tbody>
-            </table>    
-        }
-        
-        <button disabled=@Disabled type="button" title="Add Income" class="btn btn-primary btn-sm" @onclick="() => AddIncome()"><i class="fa-solid fa-plus"></i></button>
-    </div>
-
-
-    <div class="alert-secondary p-3 m-3 rounded" >
-        <h2>Bank Accounts</h2>
-        @if(Budget.BankAccounts.Count > 0)
-        {
-            <table style="width:900px" class="table table-sm">
-                <thead>
-                    <tr>
-                        <td></td>
-                        <td>Bank</td>
-                        <td>Type</td> @*like checking savings*@
-                        <td>Acct</td>
-                        <td>Description</td> @*bills, direct deposit, land*@
-
-                    </tr>
-                </thead>
-
-                <tbody>
-                        @foreach(var item in Budget.BankAccounts)
-                        {
-                            <tr>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><button disabled=@Disabled type="button" title="Delete Bank Account" class="btn btn-danger btn-sm" @onclick="() => DeleteBankAccount(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Bank" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Type" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Description" /></td>
-                            </tr>
-                        }
-                </tbody>
-            </table>   
-        }
-        
-        <button type="button" disabled=@Disabled title="Add Bank Account" class="btn btn-primary btn-sm" @onclick="() => AddBankAccount()"><i class="fa-solid fa-plus"></i></button>
-    </div>
-
-    <div class="alert-secondary p-3 m-3 rounded" >
-        <h2>Credit Cards</h2>
-        @if(Budget.CreditCards.Count > 0)
-        {
-            <table style="width:900px"  class="table table-sm">
-                <thead>
-                    <tr>
-                        <td></td>
-                        <td>Holder</td>  @*visa, mc*@
-                        <td>Acct</td>
-                        <td>Bank</td>
-                        <td>AcctAttached</td>
-                        <td>Description</td> @*bills, direct deposit, land*@
-                        <td>Debt?</td>
-
-                    </tr>
-                </thead>
-                <tbody>
-                        @foreach(var item in Budget.CreditCards)
-                        {
-                            <tr>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><button disabled=@Disabled type="button" title="Delete Credit Card" class="btn btn-danger btn-sm" @onclick="() => DeleteCreditCard(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Holder" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Bank" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AttachedTo" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Description" /></td>
-                                <td ><InputCheckbox disabled=@Disabled @bind-Value="item.IsDebt" /></td>
-                            </tr>
-                        }
-                </tbody>
-            </table>
-        }
-        <button type="button" disabled=@Disabled title="Add Credit Card" class="btn btn-primary btn-sm" @onclick="() => AddCreditCard()"><i class="fa-solid fa-plus"></i></button>
-    </div>
-
-
-    <div class="alert-secondary p-3 m-3 rounded" >
-        <h2>Online Services</h2>
-        @if(Budget.OnlineServices.Count > 0)
-        {
-            <table style="width:400px" class="table table-sm">
-                <thead>
-                    <tr>
-                        <td>&nbsp</td>
-                        <td>Service</td>  @*paypal, venmo*@
-                        <td>PaidTo</td>  @*acct number charge with this service*@
-                    </tr>
-                </thead>
-                <tbody>
-                        @foreach(var item in Budget.OnlineServices)
-                        {
-                            <tr>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><button disabled=@Disabled type="button" title="Delete Online Service" class="btn btn-danger btn-sm" @onclick="() => DeleteOnlineService(item)"><i class="fa-solid fa-trash-can"></i></button></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Service" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidTo" /></td>
-                            </tr>
-                        }
-                </tbody>
-            </table>     
-        }
-        <button type="button" disabled=@Disabled title="Add Online Service" class="btn btn-primary btn-sm" @onclick="() => AddOnlineService()"><i class="fa-solid fa-plus"></i></button>
-    </div>
-
-    <div class="d-grid gap-2 col-6 mx-auto p-3 m-3">
-        <button Disabled=@Disabled type="submit" class="btn btn-primary">Save</button>
-    </div>
-    <div class="d-grid gap-2 col-6 mx-auto text-center">
-        @Budget.BudgetId
-    </div>
-</EditForm>
+                }
+        </tbody>
+    </table>
+</div>
