--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -10,6 +10,15 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="budgets">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Budgets
+            </NavLink>
+        </div>
+        <div class="px-3 bg-dark">
+            @*using this as a spacer between menu item groups*@
+            &nbsp
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="payments">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Payments
             </NavLink>
@@ -19,14 +28,8 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Insert Payments
             </NavLink>
         </div>
-        <div class="px-3 bg-dark">
-            &nbsp
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="budget">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Budget
-            </NavLink>
-        </div>
+        
+        
     </nav>
 </div>
 
