--- a/Web/Pages/Components/Budget_View.razor
+++ b/Web/Pages/Components/Budget_View.razor
@@ -61,24 +61,30 @@
                     @*<h5 class="card-title">Card title</h5>*@
                     <p class="card-text">
                         @*Content HERE*@
-                        <table style="width:300px" class="table table-sm">
-                            <thead>
-                                <tr>
-                                    <td>Account</td>
-                                    <td>Sum</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach(var item in Budget.GetExpensePayGroups())
+                        @{
+                            var payGroups = Budget.GetExpensePayGroups();
+                            if(payGroups.Count > 0)
                                 {
-                                    <tr>
-                                        <td>@item.Account</td>
-                                        <td>$@(FormatMoney(item.Sum))</td>
-                                    </tr>
-                                }
+                                            <table style="width:300px" class="table table-sm">
+                                                <thead>
+                                                    <tr>
+                                                        <td>Account</td>
+                                                        <td>Sum</td>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach(var item in payGroups)
+                                            {
+                                                        <tr>
+                                                            <td>@item.Account</td>
+                                                            <td>$@(FormatMoney(item.Sum))</td>
+                                                        </tr>
+                                            }
 
-                            </tbody>
-                        </table>
+                                                </tbody>
+                                            </table>                                
+                                }
+                        }
                     </p>
                   </div>
                   <div class="card-footer">
