--- a/Web/Pages/Components/Budgets.razor
+++ b/Web/Pages/Components/Budgets.razor
@@ -1,9 +1,9 @@
 ﻿@page "/budgets"
 
 <h3>Budgets</h3>
+<button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => CreateNewBudget()">Create New Budget</button>
 
 <div class="alert-secondary p-3 m-3 rounded" >
-    
     <table class="table table-sm">
         <thead>
             <tr>
