--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -14,6 +14,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Budgets
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="budget/view">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Latest Budget
+            </NavLink>
+        </div>
         <div class="px-3 bg-dark">
             @*using this as a spacer between menu item groups*@
             &nbsp
