--- a/Web/Shared/MainLayout.razor
+++ b/Web/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>PaymentJournal_Web</PageTitle>
+<PageTitle>Finance Tracking</PageTitle>
 
 <div class="page">
     <div class="sidebar">
