--- a/Web/Pages/Components/Budget_View.razor
+++ b/Web/Pages/Components/Budget_View.razor
@@ -119,7 +119,7 @@
                 Budget Name: <InputText disabled=@Disabled @bind-Value="Budget.Name" />
             </div>
             <div class="col">
-                Annual Salary: <InputNumber disabled=@Disabled @bind-Value="Budget.AnnualSalary" />
+                Annual Salary: <InputNumber style="width: 100px" disabled=@Disabled @bind-Value="Budget.AnnualSalary" />
             </div>
             <div class="col">
                 Monthly Gross: $@(FormatMoney(Budget.AnnualSalary / 12))
@@ -160,12 +160,12 @@
                                         </tr>
                                     </table>
                                 </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.BillName" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidTo" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidBy" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.Amount" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Note" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.EstimatedDueDay" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.BillName" /></td>
+                                <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.PaidTo" /></td>
+                                <td ><InputText style="width: 100px" disabled=@Disabled @bind-Value="item.PaidBy" /></td>
+                                <td ><InputNumber style="width: 80px" disabled=@Disabled @bind-Value="item.Amount" /></td>
+                                <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Note" /></td>
+                                <td ><InputNumber style="width: 100px" disabled=@Disabled @bind-Value="item.EstimatedDueDay" /></td>
                             </tr>
                         }
                 </tbody>
@@ -179,7 +179,7 @@
         <h2>Income</h2>
         @if(Budget.Incomes.Count > 0)
         {
-            <table style="width:700px" class="table table-sm">
+            <table style="width:550px" class="table table-sm">
                 <thead>
                     <tr>
                         <td></td>
@@ -201,9 +201,9 @@
                                         </tr>
                                     </table>
                                 </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Employer" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Type" /></td>
-                                <td ><InputNumber disabled=@Disabled @bind-Value="item.Amount" /></td>
+                                <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.Employer" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Type" /></td>
+                                <td ><InputNumber style="width: 80px" disabled=@Disabled @bind-Value="item.Amount" /></td>
                             </tr>
                         }
                 </tbody>
@@ -218,7 +218,7 @@
         <h2>Bank Accounts</h2>
         @if(Budget.BankAccounts.Count > 0)
         {
-            <table style="width:900px" class="table table-sm">
+            <table style="width:800px" class="table table-sm">
                 <thead>
                     <tr>
                         <td></td>
@@ -241,10 +241,10 @@
                                         </tr>
                                     </table>
                                 </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Bank" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Type" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Description" /></td>
+                                <td ><InputText style="width: 250px" disabled=@Disabled @bind-Value="item.Bank" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Type" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
+                                <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Description" /></td>
                             </tr>
                         }
                 </tbody>
@@ -258,7 +258,7 @@
         <h2>Credit Cards</h2>
         @if(Budget.CreditCards.Count > 0)
         {
-            <table style="width:900px"  class="table table-sm">
+            <table style="width:800px"  class="table table-sm">
                 <thead>
                     <tr>
                         <td></td>
@@ -282,12 +282,12 @@
                                         </tr>
                                     </table>
                                 </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Holder" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Bank" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.AttachedTo" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Description" /></td>
-                                <td ><InputCheckbox disabled=@Disabled @bind-Value="item.IsDebt" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Holder" /></td>
+                                <td ><InputText style="width: 100px" disabled=@Disabled @bind-Value="item.AccountNumber" /></td>
+                                <td ><InputText style="width: 200px" disabled=@Disabled @bind-Value="item.Bank" /></td>
+                                <td ><InputText style="width: 100px" disabled=@Disabled @bind-Value="item.AttachedTo" /></td>
+                                <td ><InputText style="width: 300px" disabled=@Disabled @bind-Value="item.Description" /></td>
+                                <td ><InputCheckbox style="width: 50px" disabled=@Disabled @bind-Value="item.IsDebt" /></td>
                             </tr>
                         }
                 </tbody>
@@ -301,7 +301,7 @@
         <h2>Online Services</h2>
         @if(Budget.OnlineServices.Count > 0)
         {
-            <table style="width:400px" class="table table-sm">
+            <table style="width:300px" class="table table-sm">
                 <thead>
                     <tr>
                         <td>&nbsp</td>
@@ -320,8 +320,8 @@
                                         </tr>
                                     </table>
                                 </td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.Service" /></td>
-                                <td ><InputText disabled=@Disabled @bind-Value="item.PaidTo" /></td>
+                                <td ><InputText style="width: 150px" disabled=@Disabled @bind-Value="item.Service" /></td>
+                                <td ><InputText style="width: 100px" disabled=@Disabled @bind-Value="item.PaidTo" /></td>
                             </tr>
                         }
                 </tbody>
