--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -10,12 +10,12 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="budget/view">
+            <NavLink class="nav-link text-nowrap" href="budget/view">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Latest Budget
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="budgets">
+            <NavLink class="nav-link text-nowrap" href="budgets">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Budgets
             </NavLink>
         </div>
@@ -24,12 +24,12 @@
             &nbsp
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="payments">
+            <NavLink class="nav-link text-nowrap" href="payments">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Payments
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="insert">
+            <NavLink class="nav-link text-nowrap" href="insert">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Insert Payments
             </NavLink>
         </div>
