--- a/Web/Pages/Components/Budgets.razor
+++ b/Web/Pages/Components/Budgets.razor
@@ -1,7 +1,31 @@
 ﻿@page "/budgets"
+@using Blazorise
 
-<h3>Budgets</h3>
-<button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => CreateNewBudget()">Create New Budget</button>
+@*<Jumbotron Border="Border.Rounded" Background="Background.Secondary" Padding="Padding.Is4" Margin="Margin.Is4.FromBottom">
+    <JumbotronTitle Size="JumbotronTitleSize.Is4">Budgets</JumbotronTitle>
+    <JumbotronSubtitle>
+        Enjoy having several budgets to choose from.
+    </JumbotronSubtitle>
+    <Divider></Divider>
+    <Paragraph>
+        Remember that the last budget "saved" will be the "Latest" budget when chosing "Latest Budget" from the menu.
+        <button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => CreateNewBudget()">Create New Budget</button>
+    </Paragraph>
+</Jumbotron>*@
+
+<div class="alert-secondary p-3 m-3 rounded">
+        <div class="row">
+            <div class="col-2">
+                <h2>Budgets</h2>
+            </div>
+            
+            <div class="col-10">
+                <button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => CreateNewBudget()">Create New Budget</button>
+            </div>
+        </div>
+    </div>
+
+
 <div class="alert-secondary p-3 m-3 rounded" >
     <table class="table table-sm">
         <thead>
