--- a/Web/Pages/Components/InsertPaymentItem.razor
+++ b/Web/Pages/Components/InsertPaymentItem.razor
@@ -1,4 +1,5 @@
 ﻿@page "/insert"
+@using Blazorise
 <h3>Insert Payment</h3>
 
 
@@ -11,7 +12,8 @@
             <div class="row">
                 <div class="col-12 b-3 p-3">
                     Note:
-                    <InputText class="full-width-100" @bind-Value="PaymentItem.Note" placeholder="" />
+                    @*<InputText class="full-width-100" @bind-Value="PaymentItem.Note" placeholder="" />*@
+                    <TextEdit @bind-Text="PaymentItem.Note" Placeholder="Some text value..." />
                 </div>
             </div>
             <div class="row">
