--- a/Web/Shared/MainLayout.razor
+++ b/Web/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
 
     <main>
         <div class="top-row px-4">
+            we really aren't sure why we have this top area....
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
