--- a/Web/Pages/Components/InsertPaymentItem.razor
+++ b/Web/Pages/Components/InsertPaymentItem.razor
@@ -32,7 +32,7 @@
 
             <div class="row b-3 p-3">
                 <div class="col-sm-6">
-                    <table  style="width:400px"  class="table table-success table-sm ">
+                    <table  style="width:400px"  class="table table-sm ">
                         <thead>
                             @if (HasPayees)
                             {
@@ -62,16 +62,14 @@
                 </div>
             </div>
             
-            
-            <div class="row b-3 p-3">
-                <div class="col-sm-6">
-                    <button type="button" class="btn btn-primary btn-sm m-2" @onclick="() => AddNewPayee()">Add New Payee</button>
-                </div>
-
-                <div class="col-sm-6">
-                    <button type="submit" class="btn btn-primary" style="float:right">Save</button>
-                </div>
+            <div class="btn-group mb-3">
+                        @*<span class="input-group-text"></span>*@
+                        <button type="button" class="btn btn-primary btn-sm" @onclick="() => AddNewPayee()">Add New Payee</button>
+                        @*<span class="input-group-text"></span>*@
+                        <button type="button" class="btn btn-success btn-sm" @onclick="() => NavToPayments()">Cancel</button>
+                        <button type="submit" class="btn btn-danger btn-sm" >Save</button>
             </div>
+
         </EditForm>
         
     </div>
