--- a/Web/Pages/Components/MonthYearSelector.razor
+++ b/Web/Pages/Components/MonthYearSelector.razor
@@ -1,53 +1,43 @@
 ﻿@using System.Globalization
 
-<div class="alert alert-secondary mt-4">
-    <EditForm Model="@MonthYearModel" class="row row-cols-lg-auto g-3 align-items-center" OnValidSubmit="@HandleValidSubmit">
-      <div class="col-12">
-        <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
-        <div class="input-group">
-          <div class="input-group-text">Month</div>
+<div class="alert-secondary p-3">
+    <EditForm Model="@MonthYearModel" class="row row-cols-lg-auto align-items-center" OnValidSubmit="@HandleValidSubmit">
+        <div class="row">
+            <div class="col">
+                <div class="input-group mb-3">
+                        <span class="input-group-text">Month</span>
+                        <InputSelect class="form-select" id="month" name="Month" @bind-Value="MonthYearModel.Month">
+                            @for (int x = 1; x < 13; x++)
+                            {
+                                @if (x == DateTime.Now.Month)
+                                {
+                                    <option selected value=@x>@CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(x)</option>
+                                }
+                                else
+                                {
+                                    <option value=@x>@CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(x)</option>
+                                }
+                            }
+                        </InputSelect>
+                
+                        <span class="input-group-text">Year</span>
+                        <InputSelect class="form-select" id="year" name="Year" @bind-Value="MonthYearModel.Year">
+                            @foreach(var year in Years)
+                            {
+                                if (year == DateTime.Now.Year)
+                                {
+                                    <option selected>@year</option>
+                                }
+                                else
+                                {
+                                    <option>@year</option>
+                                }
+                            }
+                        </InputSelect>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
 
-        <InputSelect class="form-select" id="month" name="Month" @bind-Value="MonthYearModel.Month">
-            @for (int x = 1; x < 13; x++)
-            {
-                @if (x == DateTime.Now.Month)
-                {
-                    <option selected value=@x>@CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(x)</option>
-                }
-                else
-                {
-                    <option value=@x>@CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(x)</option>
-                }
-            }
-        </InputSelect>
-
+            </div>
         </div>
-      </div>
-
-      <div class="col-12">
-        <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
-        <div class="input-group">
-          <div class="input-group-text">Year</div>
-
-        <InputSelect class="form-select" id="year" name="Year" @bind-Value="MonthYearModel.Year">
-            @foreach(var year in Years)
-            {
-                if (year == DateTime.Now.Year)
-                {
-                    <option selected>@year</option>
-                }
-                else
-                {
-                    <option>@year</option>
-                }
-            }
-        </InputSelect>
-
-        </div>
-      </div>
-
-      <div class="col-12">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
     </EditForm>
 </div>
