--- a/Web/Pages/Components/Payments.razor
+++ b/Web/Pages/Components/Payments.razor
@@ -1,8 +1,6 @@
 ﻿@page "/payments"
 @page "/payments/{Month}/{Year}"
-
-
-<div class="alert-success p-3 m-3">Displaying Filtered entries</div>
+@*<div class="alert-success p-3 m-3">Displaying Filtered entries</div>*@
 
 <MonthYearSelector ReturnURL="/payments" />
 
@@ -34,9 +32,9 @@
                         </td>
                         <td hidden>@item.PaymentItemId</td>
                         <td class="text-nowrap" style="width:100px">@item.CreateDate.ToString("M-dd-yy")</td>
-                        <td >@item.Note</td>
+                        <td style="width:600px">@item.Note</td>
 
-                        <td>
+                        <td style="width:600px">
                             <table class="table table-striped table-light table-sm ">
                                 <thead>
                                     @if(item.Payees.Count > 0)
