Linked Budgets to Payments

--- a/Web/Pages/Components/Budget_View.razor
+++ b/Web/Pages/Components/Budget_View.razor
@@ -18,7 +18,7 @@
                 <h2>Budget</h2>
             </div>
             <div class="col-10">
-                @*<button type="button" title="Toggle Edit" class="btn btn-success btn-sm float-end" @onclick="() => ToggleEnabled()"><i class="fa-solid fa-pen-to-square"></i> Enable Edit</button>*@
+                <button type="button" title="Payments" class="btn btn-success btn-sm float-end" @onclick="() => Payments(Budget.BudgetId)"><i class="fa-solid fa-money-check-dollar"></i>Payments</button>
             </div>
             
         </div>
