--- a/Web/Pages/Components/InsertEditPayment.razor
+++ b/Web/Pages/Components/InsertEditPayment.razor
@@ -1,4 +1,4 @@
-﻿@page "/payment/insert"
+﻿@page "/payment/insert/{BudgetId}"
 @page "/payment/edit/{PaymentItemId}"
 @*@page "/insert"*@
 @using Blazorise
