--- a/Web/Shared/NavMenu.razor
+++ b/Web/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link text-nowrap" href="budget/view">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Latest Budget
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Last Saved Budget
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -22,11 +22,6 @@
         <div class="px-3 bg-dark">
             @*using this as a spacer between menu item groups*@
             &nbsp
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link text-nowrap" href="payments">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Payments
-            </NavLink>
         </div>
     </nav>
 </div>
