set to dark mode

--- a/Web/Pages/Components/Budgets.razor
+++ b/Web/Pages/Components/Budgets.razor
@@ -13,7 +13,7 @@
     </Paragraph>
 </Jumbotron>*@
 
-<div class="alert-secondary p-3 m-3 rounded">
+<div class="alert p-3 m-3 rounded">
         <div class="row">
             <div class="col-2">
                 <h2>Budgets</h2>
@@ -26,7 +26,7 @@
     </div>
 
 
-<div class="alert-secondary p-3 m-3 rounded" >
+<div class="alert p-3 m-3 rounded" >
     <table class="table table-sm">
         <thead>
             <tr>
