--- a/Web/Pages/Components/InsertEditPayment.razor
+++ b/Web/Pages/Components/InsertEditPayment.razor
@@ -15,7 +15,7 @@ else
 
 
 <div class="row g-3">
-    <div class="col-12 alert-secondary rounded p-3">
+    <div class="col-12 alert rounded p-3">
         <EditForm Model="PaymentItem" OnValidSubmit="HandleSubmit">
         
             <div class="row">
