--- a/Web/Pages/Components/MonthYearSelector.razor
+++ b/Web/Pages/Components/MonthYearSelector.razor
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization
 
-<div class="alert-secondary p-3">
+<div class="alert p-3">
     <EditForm Model="@MonthYearModel" class="row row-cols-lg-auto align-items-center" OnValidSubmit="@HandleValidSubmit">
         <div class="row">
             <div class="col">
