--- a/Web/Shared/MainLayout.razor.css
+++ b/Web/Shared/MainLayout.razor.css
@@ -2,6 +2,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: black;
+    color: lightgray;
 }
 
 main {
@@ -10,11 +12,12 @@ main {
 
 .sidebar {
     /*background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);*/
-    background-color: #2f302f;
+    background-color: #161b29;
 }
 
+
 .top-row {
-    background-color: #f7f7f7;
+    background-color: black;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
