minor UI updates

--- a/Web/Pages/Components/InsertEditPayment.razor
+++ b/Web/Pages/Components/InsertEditPayment.razor
@@ -6,10 +6,12 @@
 @if(IsValidPaymentItemId())
 {
     <h3>Edit Payment</h3>    
+    <div>PaymentItemId: @PaymentItemId</div>
 }
 else
 {
     <h3>Insert Payment</h3>
+    <div>BudgetId: @BudgetId</div>
 }
 
 
