--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -56,6 +56,16 @@ a, .btn-link {
     outline: 1px solid #26b050;
 }
 
+
+.max-width-400 {
+    max-width: 400px;
+}
+
+.max-width-350 {
+    max-width: 350px;
+}
+
+
 .max-width-300 {
     max-width: 300px;
 }
