updated top line on edit budget

--- a/PaymentJournal.Web/Shared/MainLayout.razor
+++ b/PaymentJournal.Web/Shared/MainLayout.razor
@@ -9,8 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            we really aren't sure why we have this top area....
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/icodeintx/paymentjournal" target="_blank">Payment Journal on GitHub</a>
         </div>
 
         <article class="content px-4">
