minor ui updates

--- a/PaymentJournal.Web/Pages/Components/Budget_View.razor
+++ b/PaymentJournal.Web/Pages/Components/Budget_View.razor
@@ -14,10 +14,10 @@
     
         <div class="alert p-3 m-3 border rounded alert_bg">
             <div class="row">
-                <div class="col-2">
-                    <h2>Budget</h2>
+                <div class="col-6">
+                    <h2>Budget - @Budget.Name</h2>
                 </div>
-                <div class="col-10">
+                <div class="col-6">
                     <button type="button" title="Payments" class="btn btn-success btn-sm float-end" @onclick="() => Payments(Budget.BudgetId)"><i class="fa-solid fa-money-check-dollar"></i>Payments</button>
                 </div>
             
