--- a/PaymentJournal.Web/Shared/NavMenu.razor
+++ b/PaymentJournal.Web/Shared/NavMenu.razor
@@ -19,10 +19,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Budgets
             </NavLink>
         </div>
-        <div class="px-3 bg-dark">
+        <div class="px-3">
             @*using this as a spacer between menu item groups*@
-            &nbsp
+            <hr />
         </div>
+        <div class="nav-item px-3 text-center">
+            AmaraCode LLC
+        </div>        
     </nav>
 </div>
 
