--- a/PaymentJournal.Web/Pages/Components/InsertEditPayment.razor
+++ b/PaymentJournal.Web/Pages/Components/InsertEditPayment.razor
@@ -85,6 +85,6 @@ else
         
     </div>
 
-    <AccountLists Accounts="@Budget.AccountLists" />
+    <AccountLists AccountsList="@Budget.AccountLists" />
 </div>
 
